Fixed minor bugs in application module